# ignat-gpt-legacy

./: .gitignore  Dockerfile  README.md  docker-compose.yml  gpt_client.py  install  lang.py  lang_utils.py  main.py  manager.py  messages.py  pyproject.toml  requirements.txt  run  tokens.py  translate.py
src/ignat/: main.py  manager.py  messages.py
