[tool.poetry]
name = "ignat"
version = "0.2.0"
description = ""
authors = ["Slava Petrov <slavapmk@gmail.com>"]
packages = [{include = "ignat", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.25.1"
tiktoken = "^0.4.0"
requests = "^2.30.0"
aiohttp = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "ignat.main:start"